--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -43,3 +43,12 @@
 body {
   margin: 0;
 }
+
+/* 
+Increase the size of cart selector spinning,
+TODO maybe throw a class on cart selector in the future and incorporate it into this 
+style because right now it'll target all antd selects 
+*/
+.ant-select-arrow-loading .anticon-loading svg {
+  font-size: 1.25rem;
+}
