Fix add to cart form mobile view

--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -50,6 +50,11 @@
   height: 360px;
 }
 
+.add-to-cart-form .ant-form-item-label {
+  text-align: right;
+  margin-right: 8px;
+}
+
 body {
   margin: 0;
 }
