--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -124,3 +124,30 @@ ul.ant-card-actions li span {
   justify-content: center;
   background-color: #e6f4ff;
 }
+
+.ant-carousel .slick-prev,
+.ant-carousel .slick-next,
+.ant-carousel .slick-prev:hover,
+.ant-carousel .slick-next:hover {
+  font-size: inherit;
+  color: currentColor;
+}
+
+.ant-carousel .slick-prev,
+.ant-carousel .slick-prev:hover {
+  left: 10px;
+  z-index: 2;
+  color: white;
+}
+
+.ant-carousel .slick-next,
+.ant-carousel .slick-next:hover {
+  right: 10px;
+  z-index: 2;
+  color: white;
+}
+
+body .slick-prev::before,
+body .slick-next::before {
+  display: none;
+}
