Make add item color blue so doesn't look disabled - addresses #53

--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -123,6 +123,11 @@ ul.ant-card-actions li span {
   align-items: center;
   justify-content: center;
   background-color: #e6f4ff;
+  color: #1677ff;
+}
+
+ul.ant-card-actions li span:hover {
+  color: #69b1ff;
 }
 
 .ant-carousel .slick-prev,
