Fix FAQ styling and add deadline. Closes #58

--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -76,6 +76,10 @@
   .cart-table .ant-table-container {
     overflow-x: auto;
   }
+
+  .faq-list p {
+    font-size: 13px;
+  }
 }
 
 .ant-layout-content {
