Add status column to cart table - closes #72. Compute price and quantity considering status - closes #73.

--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -97,6 +97,14 @@
   margin-right: 8px;
 }
 
+.cart-table .red {
+  color: red;
+}
+
+.cart-table .green {
+  color: green;
+}
+
 body {
   margin: 0;
 }
