Allow admin to mark out of stock

--- a/src/view/components/App.css
+++ b/src/view/components/App.css
@@ -105,6 +105,14 @@
   color: green;
 }
 
+.item-table .red {
+  color: red;
+}
+
+.item-table .green {
+  color: green;
+}
+
 body {
   margin: 0;
 }
